--- a/templates/diabetes.html
+++ b/templates/diabetes.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <h2>Diabetes Predictor</h2>
-    <form id="diabetes-form">
+    <form action="/" method="post">
         <label for="pregnancies">Pregnancies:</label>
         <input type="number" id="pregnancies" name="Pregnancies" required>
         <label for="glucose">Glucose:</label>
